fonts, margin, padding

--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>lesson 5</title>
-		<link rel="stylesheet" href="style.css" />
+		<link
+			rel="stylesheet"
+			href="//cdn.web-fonts.ge/fonts/alk-life/css/alk-life.min.css"
+		/>
+		<link rel="stylesheet" href="css/fonts.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Tapestry&display=swap"
+			rel="stylesheet"
+		/>
+
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<header>
 			<a href="">
-				<img src="" alt="" />
+				<img src="img/download.png" alt="logo" />
 			</a>
 			<nav>
 				<ul>
@@ -23,11 +36,49 @@
 					<li>
 						<a href="#">main</a>
 					</li>
-					<li>
-						<a href="#">main</a>
+					<li class="contact">
+						<a href="#">contact</a>
 					</li>
 				</ul>
 			</nav>
 		</header>
+		<section>
+			<img src="img/download.jpg" alt="" />
+			<p>
+				Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime ab
+				excepturi quasi, quia dignissimos ex voluptas cumque? Reprehenderit ab
+				eos neque fugit reiciendis, iusto tenetur sed beatae hic quae ipsa ipsum
+				suscipit. Explicabo, inventore quo. Molestias ipsam earum qui tenetur
+				maxime iusto dolorum, ad porro architecto recusandae in, necessitatibus
+				possimus!
+			</p>
+			<p class="google-font">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem dolorum,
+				alias similique vel nihil soluta laboriosam libero illum aliquam quas
+				dolore dignissimos minus. Nemo eius molestiae corrupti unde
+				reprehenderit ea incidunt quod quo odio repudiandae veritatis, dicta
+				temporibus voluptates rerum? Iste recusandae nesciunt enim voluptate
+				dolores reprehenderit aperiam, deserunt repudiandae nihil minus eaque
+				quibusdam! Neque doloribus unde fugit doloremque molestiae repudiandae
+				excepturi minima earum atque odio rerum, soluta error modi nesciunt
+				temporibus minus. Impedit obcaecati dolor animi nostrum consequuntur,
+				nulla saepe, earum perferendis nisi iusto id similique accusantium amet
+				molestias harum doloremque accusamus molestiae non tempore sit ut
+				nesciunt! Tempora.
+			</p>
+			<p class="google-font-local">
+				Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius repellat
+				doloribus quae laboriosam provident laborum cumque quo, aliquid
+				quisquam, ad illum obcaecati accusantium alias. Quod, explicabo
+				quibusdam quia tenetur maxime dicta perferendis? Dolores explicabo
+				sapiente odit delectus nam iste molestiae a mollitia! Quasi autem, qui
+				quae, odit libero labore ea ipsam quibusdam aspernatur nihil adipisci,
+				magni ad pariatur animi ex ducimus ratione sint esse dicta beatae
+				doloremque ab. Possimus placeat eum eos. Sequi, libero natus. Tenetur
+				at, sunt, accusamus corrupti molestias doloribus voluptatem mollitia
+				assumenda quidem non consequuntur distinctio, fugit nihil iste!
+				Praesentium, consequuntur libero! Obcaecati quasi eveniet quod fuga.
+			</p>
+		</section>
 	</body>
 </html>
